--- a/home.html
+++ b/home.html
@@ -45,17 +45,63 @@
 </div>
 </section>
 <section>
-<div class="Cookies">
-    <div class="Cookie-1">   
-     <img class="hi" src="image.webp">   
+<div class="cookies">
+    <div class="cookie-1"> 
+      <h1>cookies</h1> 
+      <h3>discover more</h3>
+    
+     <img class="hi" src="Crunchy_Cookies_3_section_nav_hover.webp">   
     </div>
-        <div class="Cookie-2">
+        <div class="cookie-2">
+          <h1> classic Grahams</h1>
+          <h3>shop now</h3>
           <img class="ki" src="Grahams_3_section_nav_288x_74d9a86f-caf1-4c49-8fba-5585ed4d66f0_288x.webp">   
         </div>
-        <div class="Cookie-3">
+        <div class="cookie-3">
+          <h1> Vanilla Wafers</h1>
+          <h3>discover more</h3>
+         
           <img class="mi" src="Vanilla_Wafers_-_Large_1_-min_750x.webp">
         </div>
 </div>
 </section>
+<section>
+  <div class="confi">
+    <h1>Share With Confidence</h1>
+      <h3>All Partake products are free of the top 9 allergens</h3>
+  <div class="confi-img">
+    <div>
+      <img src="peanut.png">
+    </div>
+  <div class="imgh">
+  <div>
+    <img src="egg.png">
+  </div>
+  <div>
+  <img  src="airy.png">
+  </div>
+  <div>
+    <img  src="soy.png">
+  </div>
+  <div>
+    <img  src="tree nuts.png">
+  </div>
+  <div>
+    <img src="seeasam.png">
+  </div>
+  <div>
+    <img src="fish.png">
+  </div>
+  <div>
+    <img src="wheat.png">
+  </div>
+  <div>
+    <img src="shelfish.png">
+  </div>
+  </div>
+  </div> 
+  </div>
+</section>
+
 </body>
 </html>
