--- a/home.html
+++ b/home.html
@@ -70,34 +70,33 @@
     <h1>Share With Confidence</h1>
       <h3>All Partake products are free of the top 9 allergens</h3>
   <div class="confi-img">
-    <div>
-      <img src="peanut.png">
+    <div class="imgname">
+      <img class="img_roun" src="peanut.png">
+      <p>Peanut</p>
     </div>
-  <div class="imgh">
-  <div>
-    <img src="egg.png">
+  <div class="imgname">
+    <img src="egg.png" class="img_roun">
   </div>
-  <div>
-  <img  src="airy.png">
+  <div class="imgname">
+  <img  src="airy.png" class="img_roun">
   </div>
-  <div>
-    <img  src="soy.png">
+  <div class="imgname">
+    <img  src="soy.png" class="img_roun">
   </div>
-  <div>
-    <img  src="tree nuts.png">
+  <div class="imgname">
+    <img  src="tree nuts.png" class="img_roun">
   </div>
-  <div>
-    <img src="seeasam.png">
+  <div class="imgname">
+    <img src="seeasam.png" class="img_roun">
   </div>
-  <div>
-    <img src="fish.png">
+  <div class="imgname">
+    <img src="fish.png" class="img_roun">
   </div>
-  <div>
-    <img src="wheat.png">
+  <div class="imgname">
+    <img src="wheat.png" class="img_roun">
   </div>
-  <div>
-    <img src="shelfish.png">
-  </div>
+  <div class="imgname">
+    <img src="shelfish.png" class="img_roun">
   </div>
   </div> 
   </div>
