--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         </ul>
      </div>
  <div class="partake-9">
-       <h1>PARTAKE</h1>
+       <h1> PARTAKE</h1>
      </div>
      
 
@@ -76,30 +76,187 @@
     </div>
   <div class="imgname">
     <img src="egg.png" class="img_roun">
+    <p>egg</p>
   </div>
   <div class="imgname">
   <img  src="airy.png" class="img_roun">
+  <p>dairy</p>
   </div>
   <div class="imgname">
     <img  src="soy.png" class="img_roun">
+    <p>soy</p>
   </div>
   <div class="imgname">
     <img  src="tree nuts.png" class="img_roun">
+    <p>treenuts</p>
   </div>
   <div class="imgname">
     <img src="seeasam.png" class="img_roun">
+    <p>sesame</p>
   </div>
   <div class="imgname">
     <img src="fish.png" class="img_roun">
+    <p>fish</p>
   </div>
   <div class="imgname">
     <img src="wheat.png" class="img_roun">
+    <p>wheat</p>
   </div>
   <div class="imgname">
     <img src="shelfish.png" class="img_roun">
+    <p>shelfish</p>
   </div>
   </div> 
   </div>
+</section>
+<section>
+  <div class="ingri">
+   <div class="ingri-1">
+    <h1>Because ingredients matter.</h1>
+    <h3>All of our products are baked with better-for-<br>you, allergy-friendly ingredients like<br> buckwheat, cassava, oats, and cinnamon so<br>those with allergies and without can<br> enjoy and share with confidence</h3>
+   <h2>Learn More About Our Ingredients</h2>
+   <p>_____________________________________________</p>
+  </div>
+  <div class="ingri-5">
+  <div class="ingri-2">
+<img class="m"  src="home_files/HP-ginger_f08ff2d2-b048-47de-85cc-f427b88c2984_1500x.png">
+<img class="n" src="home_files/HP-vanilla_21d36f6a-863f-42cd-96b7-0a0b2c0c9125_750x.webp">
+<img  class="o" src="home_files/HP-oats_240x_bf7129c1-26c5-4357-9778-53db870d9308_1500x.png">
+  </div>
+  <div class="ingri-3">
+<img class="l" src="home_files/HP-Flax_240x_aff2738b-af33-4ee1-99de-f47adb1bc9b8.webp">
+<img  class="o" src="home_files/rosemary_c8ac195c-64d6-4964-987d-abf6337bd71c_1500x.png">
+<img class="n"  src="home_files/HP-cinammon_240x_4e7dcc87-d964-487d-8697-69dafed1e5ca_1500x.png">
+  </div> 
+</div>
+
+  </div>
+  
+</section>
+
+<section>
+<div class="whatnew">
+  <h1>What's New</h1>
+</div>
+<div class="new">
+<div class="new-1">
+  <img src="home_files/Lemon_2400x2400_45angle_533x.png">
+  <p>Soft Baked Lemon Cookies</p>
+  <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i>
+<h5>4.5</h5>
+</div>
+<div class="new-2">
+  <img src="home_files/Partake_gluten_free_snickerdoodle_cookies_533x.png">
+  <p>Soft Baked Snickerdoodle Cookies</p>
+  <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i>
+  <h5>4.5</h5>
+</div>
+<div class="new-3">
+  <img src="home_files/Partake_Marvel_2_533x.png">
+  <p>Marvel Crunchy Super Hero Sprinkle Mini Cookie Snack Packs</p>
+  <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bxs-star'></i>
+  <h5>5</h5>
+</div>
+</div>
+</div>
+</section>
+<section>
+  <div class="mz">
+    <h1>Partake in your neighborhood.</h1>
+    <h2>Find a Store</h2>
+  </div>
+</section>
+<section>
+  <div class="chaco">
+  <div class="vo">
+    <img src="home_files/Partake_SBCC_threeqtr_copy_4_1500x.jpg">  </div>
+  <div class="bo">
+    <h1>“</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ut porro, error doloremque eos aperiam voluptatum molestiae natus debitis perspiciatis, vitae deserunt eveniet excepturi fuga? Voluptatum dolores sed ratione nam.</p>
+
+  </div>
+  </div>
+</section>
+<section>
+  <div class="buil">
+  <div class="imn">
+    <img src="home_files/Denise_Feb2022-web_750x.webp">
+  </div>
+  <div class="tab">
+    <h1>Building a Bigger Table</h1>
+    <h2>A portion of proceeds support families living with food insecurity</h2>
+    <div class="iconimg"><img src=""><p>Championing Food Inclusivity</p>  </div>
+    <div class="iconimg"><img src=""><p>Fighting Food Insecurity</p>  </div>
+      <div class="iconimg"><img src=""><p>Creating Opportunities in CPG</p>  </div>
+      <h4>READ MORE</h4>
+    </ul>
+  </div>
+  </div>
+</section>
+<section>
+  <div class="pm">
+      <div class="p-1">
+         <img src="home_files/reel_cover.jpg">
+       </div>
+         <div class="p-2">
+           <img src="home_files/Screenshot_29.webp">
+      </div>
+      <div class="p-3">
+        <img src="home_files/BNJ0115-Oatmeal_Dream_Pie-Scoop_Cup-4946_SQ_1 (1).webp">
+      </div>
+  </div>
+</section>
+
+<section>
+  <div class="food">
+    <h1>@PartakeFoods</h1>
+    <h5>FOLLOW US ON INSTAGRAM</h5>
+  </div>
+</section>
+<section>
+  <div class="cvc">
+  <div class="final">
+  <div class="final-1">
+<ul>
+        <li>FAQ</li>
+        <li>CONTACT</li>
+        <li>BLOG</li>
+        <li>SITEMAP</li>
+ </div>
+  <div class="mes">
+    <ul>
+        <li>PRESS</li>
+        <li>TERMS</li>
+        <li>PRIVACY</li>
+      </ul>
+  </div>
+  
+  <div class="iconic">
+         <h2>Be in the Know.</h2>
+         <i class='bx bxl-twitter' ></i>
+         <i class='bx bxl-facebook'></i>
+         <i class='bx bxl-instagram'></i>
+         <i class='bx bxl-linkedin' ></i>
+     <div class="za">
+<p>email</p>
+<p>subscribe</p>
+    </div>
+    <div class="hr">
+    <P>_______________________________________</P>
+  </div>
+    <h4>Get updates, coupons, and news from Partake</h4>
+  </div>
+  </div>
+  <div class="imb">
+    <img  src="home_files/snack-safe-white-lt.png">
+    <img src="home_files/download (3).png">
+
+<h4>Copyright © 2024 Partake Foods </h4>
+  </div>
+  </div>
+
+  
+  
 </section>
 
 </body>
